--- a/.gitignore
+++ b/.gitignore
@@ -94,12 +94,16 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
+cred.json
+
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
 #   commonly ignored for libraries.
 #   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
 #poetry.lock
+# Ignore all files starting with a dot
+.*
 
 # pdm
 #   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
